<resources>
    <string name="app_name">The Bulletin</string>
    <string name="app_slogan">World is handsized</string>
    <string name="nav_home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="tab_all">all</string>
    <string name="tab_business">business</string>
    <string name="tab_entertainment">entertainment</string>
    <string name="tab_sports">sports</string>
    <string name="tab_health">health</string>
    <string name="tab_science">science</string>
    <string name="tab_technology">technology</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_full_news">Read Full News</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="help_center">Help Center</string>
    <string name="switch_app_theme_to_dark_mode">Switch app theme to dark mode</string>
    <string name="switch_app_theme_to_light_mode">Switch app theme to light mode</string>
    <string name="find_answers_to_your_app_related_questions_here">Find answers to your app related questions here</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="help_us_make_the_app_better">Help us make the app better</string>
    <string name="light_mode">Light Mode</string>
    <string name="about_us">About us</string>
    <string name="know_about_the_developers">Know about the developers</string>
    <string name="app_version">App version</string>
    <string name="rate_us">Rate us</string>
    <string name="give_us_a_rating_on_the_play_store">Give us a rating on the play store</string>
    <string name="share">Share</string>
    <string name="share_the_app_with_your_fnf">Share the app with your FnF</string>
    <string name="error_message">Something went wrong! Please try again after sometime</string>


    <string name="banner_ad_test_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>