<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/dest_home">

    <fragment
        android:id="@+id/dest_home"
        android:name="com.soumik.newsapp.features.home.presentation.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_dest_home_to_dest_news_details"
            app:destination="@id/dest_news_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/dest_favourite"
        android:name="com.soumik.newsapp.features.favourite.presenter.FavouriteFragment"
        android:label="@string/favourites"
        tools:layout="@layout/favourite_fragment" >
        <action
            android:id="@+id/action_dest_favourite_to_dest_news_details"
            app:destination="@id/dest_news_details"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/dest_settings"
        android:name="com.soumik.newsapp.features.settings.presenter.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/dest_news_details"
        android:name="com.soumik.newsapp.features.home.presentation.newsDetails.ui.NewsDetailsFragment"
        android:label="news_details_fragment"
        tools:layout="@layout/news_details_fragment" >
        <argument
            android:name="article"
            app:argType="com.soumik.newsapp.features.home.domain.model.Article"
            app:nullable="true" />
        <argument
            android:name="category"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>